// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly 1`] = `
<button
  className="btn btn-default btn-sm"
  disabled={false}
  id={null}
  onTouchTap={[Function]}
>
  text
</button>
`;

exports[`rendering renders correctly disabled button 1`] = `
<button
  className="btn btn-default btn-sm"
  disabled={true}
  id={null}
  onTouchTap={[Function]}
>
  text
</button>
`;
